cmd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cmd
spec:
  containers:
  - name: nginx
    image: nginx
    command: ["/bin/echo"]
    args: ["hello"]
