echo-ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-ip
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: echo-ip
          image: sysnet4admin/echo-ip
