mynginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: mynginx
  name: mynginx
spec:
  containers:
  - name: mynginx
    image: nginx
    volumeMounts: 
    - mountPath: /usr/local/etc
      name: myvolume
    - mountPath: /temp-volume
      name: tempvolume
  volumes:
  - name: myvolume
    hostPath:
      path: "/Users/yunhongmin/volumes/k8s"
  - name: tempvolume
    emptyDir: {}
