myservice.yml
# myservice.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: myservice
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: mynginx
