ingress-mynginx-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 192.168.0.16.sslip.io
      http:
        paths:
          - path: /nginx
            pathType: Prefix 
            backend:
              service:
                name: mynginx 
                port:
                  number: 80
          - path: /apache
            pathType: Prefix 
            backend:
              service:
                name: myapache
                port:
                  number: 80
